package View;

import View.ICriptoView;

import javax.swing.*;

public class CriptoView extends JFrame implements ICriptoView {

}
