package View.Representations;

import org.jfree.data.category.DefaultCategoryDataset;

public interface Representation {
    void update(DefaultCategoryDataset dataset);
}
